<resources>
    <string name="app_name">PRemote</string>
    <string name="welcome">Welcome to PRemote</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="welcome_hint">Login or Register to get started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_back_hint">Login with your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>
