<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/login_layout"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_above="@+id/login_wrapper"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/layout_bg"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:id="@+id/login_wrapper">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_back"
            android:id="@+id/welcome_back"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_back"
            android:id="@+id/welcome_back_hint"
            android:textColor="@android:color/darker_gray"
            android:text="@string/welcome_back_hint"
            android:textAlignment="center"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_below="@id/welcome_back_hint"
            android:hint="@string/email"
            android:textColor="@android:color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:id="@+id/login_email"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_below="@id/login_email"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:id="@+id/login_password"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:id="@+id/forgot_password"
            android:layout_below="@id/login_password"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/login_btn"
            android:layout_marginTop="30dp"
            android:layout_below="@id/forgot_password"
            android:layout_marginBottom="15dp"
            android:id="@+id/login"
            />


    </RelativeLayout>

</RelativeLayout>