<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerVertical="true"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:id="@+id/buttons_wrapper"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/welcome"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/welcome_hint"
            android:layout_below="@id/welcome"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:id="@+id/welcome_hint"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/sign_in"
            android:layout_below="@id/welcome_hint"
            android:background="#36393F"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/sign_up"
            android:layout_below="@id/sign_in"
            android:background="#36393F"
            android:textColor="@android:color/white"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="3dp"
            android:textSize="16sp"
            />

    </RelativeLayout>


</RelativeLayout>